[package]
name = "c3_web_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.4.0"
aws-sdk-dynamodb = "1.27.0"
rocket = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
